@@ -84,7 +84,7 @@
          "web" : "https://github.com/skryf/Skryf"
       }
    },
-   "version" : "0.99_4",
+   "version" : "0.99_5",
    "x_contributors" : [
       "Adam Stokes <adam.stokes@ubuntu.com>",
       "Adam Stokes <battlemidget@users.noreply.github.com>",
