@@ -1,0 +1,3 @@
+% layout 'admin';
+
+<h1>Blog New</h1>
