@@ -1,6 +1,7 @@
 Revision history for Skryf
 
 {{$NEXT}}
+	- Core plugin blog added
 
 0.99_4  2014-01-13 14:30:43 EST
 	- version all packages
